# bytebeat

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake_modules/: SuperColliderServerPlugin.cmake
include/: ast.hpp  expression.hpp  interpreter.hpp  lex.hpp  parse.hpp  tokenize.hpp
plugins/ByteBeat/: ByteBeat.cpp  ByteBeat.hpp  ByteBeat.sc  ByteBeat.schelp  ByteBeatController.sc  ByteBeatController.schelp  ByteGrain.schelp
src/: interpreter.cpp  lex.cpp  main.cpp  parse.cpp  tokenize.cpp
test/: expression_test.cpp  parse_test.cpp  test.cpp  test_ast.cpp  test_expression.cpp  test_lex.cpp  test_parse.cpp  test_tokenize.cpp  tokenize_test.cpp
